--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 /*============================================ 
-# Template Name: Bizera 
+# Template Name: PlayParadice 
 # Version: 2.0
 # Date: 08/10/2023
 # Author: pixelaxis
 # Author URI: https://themeforest.net/user/pixelaxis
-# Description: Bizera - Online Gaming Website HTML Template
+# Description: PlayParadice - Online Gaming Website HTML Template
 ============================================*/
 /*============================================ 
 ======== Table of Css Content =========
